# tinyvec

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  stad_alloc.hpp  tinyvec.hpp
